--- a/src/main/resources/properties/messages_en.properties
+++ b/src/main/resources/properties/messages_en.properties
@@ -59,6 +59,8 @@ reset.password.newpassword = New Password
 reset.password.newpasswordconfirm = Confirm New Password
 reset.password.success = Your password has been changed.
 reset.password.error = There was a problem with changing your password, if the problem persists contact the administration.
+reset.password.error.authentication = You are not authenticated.
+reset.password.error.email = The email provided was invalid.
 
 social.facebook.sign.in.button = Sign in with Facebook
 social.twitter.sign.in.button = Sign in with Twitter
