--- a/src/main/resources/properties/messages_pl.properties
+++ b/src/main/resources/properties/messages_pl.properties
@@ -59,6 +59,8 @@ reset.password.newpassword = Nowe has?o
 reset.password.newpasswordconfirm = Potwierd? nowe has?o
 reset.password.success = Your password has been changed.
 reset.password.error = There was a problem with changing your password, if the problem persists contact the administration.
+reset.password.error.authentication = You are not authenticated.
+reset.password.error.email = The email provided was invalid.
 
 social.facebook.sign.in.button = Zaloguj przez Facebooka
 social.twitter.sign.in.button = Zaloguj przez Twittera
