+ temporary deleteAll (accounts) method exposed to controller /deleteAll cors minor changes

--- a/src/main/resources/properties/messages_en.properties
+++ b/src/main/resources/properties/messages_en.properties
@@ -61,6 +61,7 @@ reset.password.success = Your password has been changed.
 reset.password.error = There was a problem with changing your password, if the problem persists contact the administration.
 reset.password.error.authentication = You are not authenticated.
 reset.password.error.email = The email provided was invalid.
+reset.password.password.null = The password field can't be empty
 
 social.facebook.sign.in.button = Sign in with Facebook
 social.twitter.sign.in.button = Sign in with Twitter
